--- a/public_html/media/css/menu.css
+++ b/public_html/media/css/menu.css
@@ -1,10 +1,49 @@
-#menu-wrapper { float: left;
-	padding-bottom: 1em;
+#menu-wrapper {
+	float: left;
 	width: 20%;
+	font-size: 110%;
 }
+
 #menu {
-	padding-right: 1em;
+	padding: 30px 0 16px 0;
+	margin-right: 1em;
+	position: relative;
+	background: top right repeat-y linear-gradient(to left, #f6f6f6 0, #fff 8px);
+	background-size: 8px 100%;
+	box-shadow: -1px 0 0 #ddd inset;
 }
+#menu:before {
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #fff 16px);
+	bottom: 0;
+}
+#menu:after {
+	background: linear-gradient(to top, rgba(255, 255, 255, 0) 0, #fff 16px);
+	top: 0;
+}
+#menu:before,
+#menu:after {
+	position: absolute;
+	content: '';
+	height: 16px;
+	right: 0;
+	width: 100%;
+}
+#menu hr {
+	position: relative;
+	margin-right: 1px;
+	background: linear-gradient(to bottom, #f6f6f6 0, rgba(255, 255, 255, 0) 8px);
+	height: 4px;
+	border: 0;
+}
+#menu hr:after {
+	position: absolute;
+	background: linear-gradient(to right, #fff 0, rgba(255, 255, 255, 0) 100%);
+	top: 0;
+	width: 100%;
+	height: 4px;
+	content: '';
+}
+
 #menu-wrapper+#main {
 	width: 80%;
 	float: right;
@@ -24,29 +63,35 @@
 	font-weight: bold;
 	margin-bottom: 0;
 }
+
 #menu ul.action {
 	margin-bottom: 1em;
 }
 #menu ul.action li {
+	text-align: right;
 	font-weight: normal;
+	white-space: nowrap;
+	overflow: hidden;
 }
 #menu ul.action li a {
 	display: block;
 	color: black;
-	padding: 4px 8px;
+	padding: 4px 16px;
 	text-decoration: none;
 }
 #menu ul.action li.active a {
-	color: #f5f5f5;
-	background: #1969CB;
+	background: white;
+	border-left: 3px solid #1969CB;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	border-radius: 2px 0 0 2px;
 }
+#menu ul.action li:not(.active) a:focus,
 #menu ul.action li:not(.active) a:hover {
-	background: #eee;
+	border-right: 3px solid #ddd;
+	padding-right: 13px;
 	color: black;
 	text-decoration: none;
-}
-#menu ul.action :focus {
-	background: #f5f5f5;
 }
 #menu .share ul {
 	margin: 0 auto;
@@ -64,58 +109,4 @@
 	padding: 0 0.15em;
 	margin: 0;
 	display: inline;
-}
-
-#menu .user-pic {
-	text-align: center;
-}
-#menu .user-pic a {
-	font-size: 0;
-	line-height: 0;
-	margin: 0;
-	padding: 0;
-}
-#menu .user-pic img {
-	box-shadow: 0 0 2px rgba(96,96,96,0.5) inset;
-	-webkit-box-shadow: 0 0 2px rgba(96,96,96,0.5) inset;
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-	padding: 0;
-	margin: 0 auto;
-	background-color: rgba(255, 255, 255, 0.6);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: top center;
-	width: 120px;
-	height: 160px;
-	max-width: 100%;
-}
-#menu .user-pic img.unavailable {
-	background-image: url('../img/anon.png');
-}
-#menu .user-nick {
-	margin: 0;
-	font-weight: bold;
-	text-align: center;
-}
-#menu .user-nick a {
-	max-width: 100%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: inline-block;
-}
-
-/* small screens */
-@media (max-width: 800px), (max-device-width: 800px) {
-	#menu-wrapper { float: none !important; width: 100% !important; max-width: 100% !important; }
-	#menu { margin: 0; }
-	#menu .user-pics { float: left; min-width: 10em; width: 14em; margin-right: 1em; }
-	#menu .actions { float: left; }
-	#menu .actions div { float: left; }
-	#menu .actions div:first-child { margin-right: 1em; }
-	#menu .share { clear: both; }
-}
-/* big screens */
-@media (min-width: 801px) {
-	#menu-wrapper .actions { font-size: 105%; }
 }
