--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -21,8 +21,20 @@ h1, h2, h3 {
 	}
 	h2, h3 {
 		font-weight: normal;
+		text-align: center;
 		margin: 0 0 1em 0;
-		border-bottom: 1px solid #eee;
+		position: relative;
+	}
+	h2:after, h3:after {
+		position: absolute;
+		bottom: -14px;
+		left: 0;
+		width: 100%;
+		height: 8px;
+		border-top: 1px solid #eee;
+		background: center bottom no-repeat radial-gradient(#f6f6f6, #fff 70%);
+		background-size: 100% 16px;
+		content: '';
 	}
 
 .clear {
