--- a/src/Views/user-entries-ratings.phtml
+++ b/src/Views/user-entries-ratings.phtml
@@ -23,10 +23,10 @@
 	<ul>
 		<?php foreach ($viewContext->entries as $entry): ?>
 			<li>
-				<a target="_blank" href="<?php echo Retriever::getMalLinkText($entry) ?>">
-					<?php echo Retriever::getMediaTitleText($entry) ?>
+				<a target="_blank" href="<?php echo $entry->mal_link ?>">
+					<?php echo $entry->title ?>
 				</a>
-				<span class="details">&nbsp;(<?php echo Retriever::getCompletedDuration($entry) ?> min.)</span>
+				<span class="details">&nbsp;(<?php echo $entry->completed_duration ?> min.)</span>
 			</li>
 		<?php endforeach ?>
 	</ul>
