--- a/src/Views/user-profile.phtml
+++ b/src/Views/user-profile.phtml
@@ -1,21 +1,21 @@
 <div class="section basic">
 	<h2>
-		<a href="<?php echo UserControllerProfileModule::url($viewContext->userName) ?>">
-			<?php echo $viewContext->userName ?>
+		<a href="<?php echo UserControllerProfileModule::url($viewContext->user->name) ?>">
+			<?php echo $viewContext->user->name ?>
 		</a>&rsquo;s profile
-		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', $viewContext->processed) ?>">
-			<?php echo date('M d, H:i', $viewContext->processed) ?> UTC
+		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
+			<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC
 		</span>
 		<span class="clear"></span><!-- fix for small pages -->
 	</h2>
 
 	<div class="section-body">
 		<div class="user-pic">
-			<a class="waitable" href="<?php echo UserControllerProfileModule::url($viewContext->userName, $viewContext->media) ?>">
-			<?php if (empty($viewContext->userPictureUrl)): ?>
+			<a class="waitable" href="<?php echo UserControllerProfileModule::url($viewContext->user->name, $viewContext->media) ?>">
+			<?php if (empty($viewContext->user->picture_url)): ?>
 				<img class="profile unavailable" alt="No profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>">
 			<?php else: ?>
-				<img class="profile" alt="<?php echo $viewContext->userName ?>&rsquo;s profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>" style="background-image: url('<?php echo $viewContext->userPictureUrl ?>')">
+				<img class="profile" alt="<?php echo $viewContext->user->name ?>&rsquo;s profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>" style="background-image: url('<?php echo $viewContext->user->picture_url ?>')">
 			<?php endif ?>
 			</a>
 		</div>
@@ -24,19 +24,19 @@
 			<div class="list-views">
 				<p class="number">
 					List views:
-					<span><?php echo $viewContext->animeViewCount + $viewContext->mangaViewCount ?></span>
+					<span><?php echo $viewContext->user->anime_views + $viewContext->user->manga_views ?></span>
 				</p>
 
 				<div class="bar">
-					<div class="filled" style="width: <?php echo $viewContext->animeViewCount * 100.0 / max(1, $viewContext->animeViewCount + $viewContext->mangaViewCount) ?>%"></div>
+					<div class="filled" style="width: <?php echo $viewContext->user->anime_views * 100.0 / max(1, $viewContext->user->anime_views + $viewContext->user->manga_views) ?>%"></div>
 				</div>
 
 				<p class="small-number">
 					<span class="anime">
-						<?php echo $viewContext->animeViewCount ?> anime
+						<?php echo $viewContext->user->anime_views ?> anime
 					</span>,&nbsp;
 					<span class="manga">
-						<?php echo $viewContext->mangaViewCount ?> manga
+						<?php echo $viewContext->user->manga_views ?> manga
 					</span>
 				</p>
 			</div>
@@ -55,15 +55,15 @@
 			</div>
 
 			<div class="mal-links">
-				<a target="_blank" href="http://myanimelist.net/profile/<?php echo $viewContext->userName ?>">
+				<a target="_blank" href="http://myanimelist.net/profile/<?php echo $viewContext->user->name ?>">
 					Visit MAL profile
 				</a>
 				<br>
-				<a target="_blank" href="http://myanimelist.net/animelist/<?php echo $viewContext->userName ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
+				<a target="_blank" href="http://myanimelist.net/animelist/<?php echo $viewContext->user->name ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
 					Anime list on MAL
 				</a>
 				<br>
-				<a target="_blank" href="http://myanimelist.net/mangalist/<?php echo $viewContext->userName ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
+				<a target="_blank" href="http://myanimelist.net/mangalist/<?php echo $viewContext->user->name ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
 					Manga list on MAL
 				</a>
 			</div>
