Removed date from user profile

--- a/src/Views/user-profile.phtml
+++ b/src/Views/user-profile.phtml
@@ -4,7 +4,7 @@
 			<?php echo $viewContext->user->name ?>
 		</a>&rsquo;s profile
 		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
-			<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC
+			<!--<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC-->
 		</span>
 		<span class="clear"></span><!-- fix for small pages -->
 	</h2>
