--- a/src/Views/user-ratings-time-dist.phtml
+++ b/src/Views/user-ratings-time-dist.phtml
@@ -61,7 +61,7 @@
 					series: [ {
 						data: <?php echo json_encode(array_map(function($x) { return $x / 60.; }, array_values($viewContext->ratingTimeDistribution->getGroupsSizes()))) ?>,
 						point: { events: { click: function(e) {
-							toggleEntries($('.score-time-dist .wrapper-more'), {'sender': 'ratings', 'filter-param': this.category});
+							toggleEntries($('.score-time-dist .entries-wrapper'), {'sender': 'ratings', 'filter-param': this.category});
 						} } }
 					} ]
 				});
