--- a/src/Views/user-profile.phtml
+++ b/src/Views/user-profile.phtml
@@ -1,127 +1,3 @@
-<div class="section basic">
-	<h2>
-		<a href="<?php echo UserControllerProfileModule::url($viewContext->user->name) ?>">
-			<?php echo $viewContext->user->name ?>
-		</a>&rsquo;s profile
-		<span class="updated" data-tooltip="Time of last data update" data-date="<?php echo date('c', strtotime($viewContext->user->processed)) ?>">
-			<!--<?php echo date('M d, H:i', strtotime($viewContext->user->processed)) ?> UTC-->
-		</span>
-		<span class="clear"></span><!-- fix for small pages -->
-	</h2>
-
-	<div class="section-body">
-		<div class="user-pic">
-			<a class="waitable" href="<?php echo UserControllerProfileModule::url($viewContext->user->name, $viewContext->media) ?>">
-			<?php if (empty($viewContext->user->picture_url)): ?>
-				<img class="profile unavailable" alt="No profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>">
-			<?php else: ?>
-				<img class="profile" alt="<?php echo $viewContext->user->name ?>&rsquo;s profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>" style="background-image: url('<?php echo $viewContext->user->picture_url ?>')">
-			<?php endif ?>
-			</a>
-		</div>
-
-		<div class="left">
-			<div class="list-views">
-				<p class="number">
-					List views:
-					<span><?php echo $viewContext->user->anime_views + $viewContext->user->manga_views ?></span>
-				</p>
-
-				<div class="bar">
-					<div class="filled" style="width: <?php echo $viewContext->user->anime_views * 100.0 / max(1, $viewContext->user->anime_views + $viewContext->user->manga_views) ?>%"></div>
-				</div>
-
-				<p class="small-number">
-					<span class="anime">
-						<?php echo $viewContext->user->anime_views ?> anime
-					</span>,&nbsp;
-					<span class="manga">
-						<?php echo $viewContext->user->manga_views ?> manga
-					</span>
-				</p>
-			</div>
-
-			<div class="years">
-				<p class="number">
-					Years on MAL:
-					<span>
-						<?php if ($viewContext->yearsOnMal): ?>
-							<?php printf('%.1f', $viewContext->yearsOnMal) ?>
-						<?php else: ?>
-							unknown
-						<?php endif ?>
-					</span>
-				</p>
-			</div>
-
-			<div class="mal-links">
-				<a target="_blank" href="http://myanimelist.net/profile/<?php echo $viewContext->user->name ?>">
-					Visit MAL profile
-				</a>
-				<br>
-				<a target="_blank" href="http://myanimelist.net/animelist/<?php echo $viewContext->user->name ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
-					Anime list on MAL
-				</a>
-				<br>
-				<a target="_blank" href="http://myanimelist.net/mangalist/<?php echo $viewContext->user->name ?><?php if (Config::$sendReferrer) echo '&amp;sclick=1'; ?>">
-					Manga list on MAL
-				</a>
-			</div>
-		</div>
-
-		<div class="clear"></div>
-	</div>
-</div>
-
-
-
-<div class="section friends">
-	<h2>
-		Friends (<?php echo count($viewContext->friends) < 100 ? count($viewContext->friends) : '100+' ?>)
-	</h2>
-	<div class="section-body">
-		<?php if (count($viewContext->friends) == 0): ?>
-			<p>This user has no friends on MAL. :(</p>
-		<?php else: ?>
-			<ul>
-				<?php foreach ($viewContext->friends as $friend): ?>
-					<li>
-						<a class="mg waitable" href="<?php echo UserControllerProfileModule::url($friend->name, $viewContext->name) ?>">
-							<span><?php echo $friend->name ?></span>
-						</a>
-					</li>
-				<?php endforeach ?>
-			</ul>
-			<div class="clear"></div>
-		<?php endif ?>
-	</div>
-</div>
-
-
-
-<div class="section clubs">
-	<h2>
-		Clubs (<?php echo count($viewContext->clubs) ?>)
-	</h2>
-	<div class="section-body">
-		<?php if (count($viewContext->clubs) == 0): ?>
-			<p>This user doesn&rsquo;t belong to any clubs.</p>
-		<?php else: ?>
-			<ul>
-				<?php foreach ($viewContext->clubs as $club): ?>
-					<li>
-						<a target="_blank" href="http://myanimelist.net/clubs.php?cid=<?php echo $club->mal_id ?>">
-							<span><?php echo $club->name ?></span>
-						</a>
-					</li>
-				<?php endforeach ?>
-			</ul>
-			<div class="clear"></div>
-		<?php endif ?>
-	</div>
-</div>
-
-<script type="text/javascript">
-	$('.clubs li').width(Math.floor($('.clubs').width() / 2 - 20));
-	$('.friends li').width(Math.floor($('.friends').width() / 2 - 20));
-</script>
+<?php self::renderFile('user-profile-basic', $viewContext) ?>
+<?php self::renderFile('user-profile-friends', $viewContext) ?>
+<?php self::renderFile('user-profile-clubs', $viewContext) ?>
