--- a/src/Views/user-profile.phtml
+++ b/src/Views/user-profile.phtml
@@ -1,3 +1,4 @@
 <?php self::renderFile('user-profile-basic', $viewContext) ?>
+<?php self::renderFile('user-profile-media-summaries', $viewContext) ?>
 <?php self::renderFile('user-profile-friends', $viewContext) ?>
 <?php self::renderFile('user-profile-clubs', $viewContext) ?>
