Fixed class names

--- a/src/Views/user-list.phtml
+++ b/src/Views/user-list.phtml
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section list">
 	<h2>
 		<?php echo ucfirst(Media::toString($viewContext->media)) ?> list
 		<span class="filter-hint">&nbsp;(<span class="filter-hint-shown"></span> of <span class="filter-hint-total"></span>)</span>
