--- a/public_html/media/css/user/ratings.css
+++ b/public_html/media/css/user/ratings.css
@@ -1,5 +1,5 @@
 .target { height: 17em; line-height: 0; }
-.score-length-dist .target { height: 20em; }
+.rating-length-dist .target { height: 20em; }
 
 ul.infobox { height: 17em; }
 ul.infobox .btn { margin-top: 1em; }
