--- a/public_html/media/css/user/suggestions.css
+++ b/public_html/media/css/user/suggestions.css
@@ -1,4 +1,5 @@
 .missing table {
+	font-size: 90%;
 	table-layout: fixed;
 	width: 100%;
 	border-spacing: 0;
@@ -35,4 +36,7 @@
 	display: block;
 	text-align: center;
 	color: silver;
+}
+.missing i {
+	margin-right: 4px;
 }
