--- a/src/Views/user-suggestions-missing.phtml
+++ b/src/Views/user-suggestions-missing.phtml
@@ -1,7 +1,7 @@
 <div class="section missing">
 	<h2>
-		<i data-tooltip="Do you waste your time on crap?|Check your time spent on 10/10 titles|(planned titles are not counted)." class="icon-tooltip"></i>
-		Ratings vs. time spent
+		<i data-tooltip="List of titles related to those you have on your list, sorted by score." class="icon-tooltip"></i>
+		Missing titles
 	</h2>
 	<div class="section-body">
 		<?php if (empty($viewContext->franchises)): ?>
